--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,12 @@ html,body {
 }
 
 a {
-  color: #FF7F50;
-text-decoration: none;
+  color: black;
+  text-decoration: none;
 }
 
 h1, h2, h3 {
-padding-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 p{
@@ -61,7 +61,7 @@ p{
 }
 
   .bg-dark {
-    background: #594e4e;
+    background: #333;
     color: #f6efef;
 }
 
@@ -71,8 +71,9 @@ p{
 
 }
    .bg-primary {
-    color: #333;
     background: #e48664;
+    color: #333;
+   
 }
 .clr {
   clear: both;
